--- a/virtual-tag/src/styles/_settings.scss
+++ b/virtual-tag/src/styles/_settings.scss
@@ -22,7 +22,6 @@ $shadow: 0 3px 20px rgba(0, 0, 0, 0.356);
 }
 
 body {
-  background: linear-gradient(145deg, rgba(0,0,0,1) 0%, rgba(83,83,83,1) 100%);
   color: $white;
   height: 100vh;
 }
@@ -49,5 +48,68 @@ textarea {
   resize: none;
   margin: 5px;
   padding: 8px;
-  background: $white;
+  background: $white; 
 }
+
+.wallet__connexion {
+  padding: 10px 20px;
+  border-radius: 15px;
+  font-size: 20px;
+}
+
+.image-upload-button {
+  padding: 8px 10px;
+  border-radius: 7px;
+}
+
+.preview-nft {
+  width: 75%;
+}
+
+.nft-anounces {
+  display: flex;
+  width: 100vw;
+}
+
+.nft-anounce {
+  width: 33%;
+  padding: 30px;
+  margin: 0px 30px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  min-height: 300px;
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(83,83,83,1) 100%);
+  box-shadow: 0 3px 20px rgb(0 0 0 / 36%);
+  border-radius: 20px;
+}
+
+.anounce-image {
+  width: 75%;
+  border-radius: 20px;
+  margin-bottom: 20px;
+}
+
+.nft-anounce h1{
+  margin-bottom: 20px;
+}
+
+.nft-anounce h3{
+  margin-bottom: 20px;
+}
+
+.anounce-separation {
+  height: 2px;
+  width: 80%;
+  background-color: rgb(207, 207, 207);
+  margin-bottom: 20px;
+}
+
+.nft-anounce form {
+  display: grid;
+}
+.nft-anounce form input {
+  text-align: center;
+}
+
