--- a/virtual-tag/src/styles/_settings.scss
+++ b/virtual-tag/src/styles/_settings.scss
@@ -64,11 +64,14 @@ textarea {
 
 .preview-nft {
   width: 75%;
+  border-radius: 20px;
+  margin: 40px 0;
 }
 
 .nft-anounces {
   display: flex;
   width: 100vw;
+  height: 75vh;
 }
 
 .nft-anounce {
@@ -113,3 +116,8 @@ textarea {
   text-align: center;
 }
 
+.main-title {
+  color: black;
+  text-align: center;
+  padding-bottom: 40px;
+}
