--- a/virtual-tag/src/styles/_settings.scss
+++ b/virtual-tag/src/styles/_settings.scss
@@ -65,17 +65,18 @@ textarea {
 .preview-nft {
   width: 75%;
   border-radius: 20px;
-  margin: 40px 0;
+  margin: 10px 0;
 }
 
 .nft-anounces {
   display: flex;
-  width: 100vw;
   height: 75vh;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .nft-anounce {
-  width: 33%;
+  width: 25%;
   padding: 30px;
   margin: 0px 30px;
   display: flex;
@@ -83,15 +84,18 @@ textarea {
   flex-direction: column;
   align-items: center;
   min-height: 300px;
-  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(83,83,83,1) 100%);
+  background: linear-gradient(45deg, rgba(83,83,83,1) 0%, rgba(0,0,0,1) 50%, rgba(83,83,83,1) 100%);
   box-shadow: 0 3px 20px rgb(0 0 0 / 36%);
   border-radius: 20px;
+  margin-bottom: 40px;
 }
 
 .anounce-image {
   width: 75%;
+  height: 150px;
   border-radius: 20px;
   margin-bottom: 20px;
+  object-fit: cover;
 }
 
 .nft-anounce h1{
@@ -106,7 +110,8 @@ textarea {
   height: 2px;
   width: 80%;
   background-color: rgb(207, 207, 207);
-  margin-bottom: 20px;
+  margin-bottom: 5px;
+  border-radius: 5px;
 }
 
 .nft-anounce form {
